The Arabic text with Cursive font will fallback to Traditional Arabic font
Categories
(Core :: Layout: Text and Fonts, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr128 | --- | unaffected |
firefox132 | --- | unaffected |
firefox133 | --- | unaffected |
firefox134 | --- | fixed |
firefox135 | --- | fixed |
People
(Reporter: over68, Assigned: jfkthame)
References
(Regression)
Details
(Keywords: regression)
Attachments
(5 files)
191.15 KB,
image/jpeg
|
Details | |
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
Open
data:text/html;charset=utf-8,<div style="font-family:cursive;font-size:80px">السلام عليكم
Expected result:
The Arabic text will be displayed in Arial font instead of Traditional Arabic font.
I can also reproduce with monospace font.
data:text/html;charset=utf-8,<div style="font-family:monospace;font-size:80px">السلام عليكم
Regression range:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=6840cc3786ac4ce90558c0082c0dae5cd1f997a5&tochange=73ae30d15fdda0ab65c7315f970a9d483359e29d
Regressed by: bug 1928012
Assignee | ||
Comment 3•15 days ago
|
||
It doesn't look like we have an Arabic font configured for cursive
by default: https://searchfox.org/mozilla-central/rev/5da13af5e6be251b70e994c8b4bd35fb5271f1e3/modules/libpref/init/all.js#2132-2135 shows that font.name-list.cursive.ar
just lists Comic Sans, which would work for any Latin characters present in content tagged with lang=ar
, but AFAIK doesn't include actual Arabic characters.
Given that, it's not clear what cursive
should resolve to in Arabic; it's just a fallback of some kind. Specifying a suitable font in the font.name-list.cursive.ar
pref would provide control over this.
Assignee | ||
Comment 4•15 days ago
|
||
Regressed by: bug 1928012
Yes, the fallback rewrite in that bug did change behavior here; we previously tried Arial as a first-choice fallback for everything, whereas now we try more script-specific options first.
So basically this is suggesting -- in the absence of specific fonts being configured in the font.name-list.* prefs for these generics -- that Arial would be a preferable fallback, rather than the Traditional Arabic that we're now getting?
Comment 6•14 days ago
•
|
||
I'm not seeing this issue in Nightly - https://arkenfox.github.io/TZP/tests/fontdebug.html
edit: I need to learn to read expected result
properly - enjoy the test page
Assignee | ||
Comment 7•12 days ago
|
||
This restores the preferred fallback font we were using prior to bug 1928012,
for better text clarity.
Updated•12 days ago
|
Comment 8•12 days ago
|
||
Set release status flags based on info from the regressing bug 1928012
Assignee | ||
Comment 9•11 days ago
|
||
Not in WPT as the particular fonts used for fallback are not in any way specified
or standardized; this is just testing the particular behavior we have implemented
in Gecko (for now -- we might change the font configuration prefs in future, and
if so this test will potentially need adjusting to match).
Comment 10•11 days ago
|
||
Comment 11•11 days ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/b6165cc77c14
https://hg.mozilla.org/mozilla-central/rev/b136e0dc43e3
Comment 12•10 days ago
|
||
The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox134
towontfix
.
For more information, please visit BugBot documentation.
Assignee | ||
Comment 13•9 days ago
|
||
This restores the preferred fallback font we were using prior to bug 1928012,
for better text clarity.
Original Revision: https://phabricator.services.mozilla.com/D230049
Updated•9 days ago
|
Assignee | ||
Comment 14•9 days ago
|
||
Not in WPT as the particular fonts used for fallback are not in any way specified
or standardized; this is just testing the particular behavior we have implemented
in Gecko (for now -- we might change the font configuration prefs in future, and
if so this test will potentially need adjusting to match).
Original Revision: https://phabricator.services.mozilla.com/D230135
Updated•9 days ago
|
Comment 15•9 days ago
|
||
beta Uplift Approval Request
- User impact if declined: Undesired fallback font choice for some Arabic content on Windows
- Code covered by automated testing: yes
- Fix verified in Nightly: no
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: n/a
- Risk associated with taking this patch: minimal
- Explanation of risk level: Just a change to default fallback font for Arabic script
- String changes made/needed: none
- Is Android affected?: no
Assignee | ||
Updated•9 days ago
|
Assignee | ||
Comment 16•9 days ago
|
||
While this isn't really a "correctness" issue, as there's no hard and fast rule about what fallback fonts should be used, in practice the changed default that resulted from the Windows font fallback rewrite was undesirable for users, so this just reverts to preferring Arial (matching our longstanding behavior).
So IMO we should uplift this to avoid shipping the unwanted change to Release for one cycle.
Updated•9 days ago
|
Updated•9 days ago
|
Comment 17•9 days ago
|
||
uplift |
Updated•9 days ago
|
Description
•