Bug 1932814 - Use Arial as default fallback font for Arabic script on Windows. r=dholbert

This restores the preferred fallback font we were using prior to bug 1928012,
for better text clarity.

Differential Revision: https://phabricator.services.mozilla.com/D230049